@@ -1,3 +1,7 @@
+19 Nov 2005 mipsator
+ * fixed pmkfile, pmkcfg.sh and compat.
+ * polished a bit func.c.
+
 17 Nov 2005 mipsator
  * added basic distclean target in generated makefile and started to
    prepare for advanced tags support.
